hphp/test/zend/good/ext/xsl/tests/bug54446.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded('xsl')) die("skip Extension XSL is required\n");
}
